# MktDataAggregator

./: .clang-format  ChunkedFileReader.hpp  MPSCQueue.hpp  MktData.hpp  MktDataMessage.hpp  Mmf.cpp  Mmf.hpp  MultiplexedFile.txt  Readme.md  main.cpp  utils.cpp  utils.hpp
gtest/: .gitignore  CMakeLists.txt  main.cpp  mmf_test.cpp  mpsc_queue_test.cpp
